tests/sksl/errors/golden/GrNoFragmentProcessorLocals.cpp
### Compilation failed:

error: 1: variables of type 'fragmentProcessor' must be global
1 error
